--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a onclick="scrollToSection('home')">Home</a>
         <a onclick="scrollToSection('menu')">Photos</a>
         <a onclick="scrollToSection('about')">About Me</a>
-        <a onclick="scrollToSection('pricing')">Pricing</a>
+        <!-- <a onclick="scrollToSection('pricing')">Pricing</a> -->
         <a onclick="scrollToSection('contact')">Contact Me</a>
     </nav>
     <div class="social-icons">
@@ -44,19 +44,19 @@
                 <img src="assets/IMG_9150.JPG" alt="Menu Item 1">
             </div>
             <div class="carousel-item">
-                <img src="assets/IMG_9141.PNG" alt="Menu Item 4">
+                <img src="assets/IMG_9141.PNG" alt="Menu Item 2">
             </div>
             <div class="carousel-item">
-                <img src="assets/IMG_9144.JPG" alt="Menu Item 5">
+                <img src="assets/IMG_9144.JPG" alt="Menu Item 3">
             </div>
             <div class="carousel-item">
-                <img src="assets/IMG_9151.JPG" alt="Menu Item 7">
+                <img src="assets/IMG_9151.JPG" alt="Menu Item 4">
             </div>
             <div class="carousel-item">
-                <img src="assets/IMG_9160.JPG" alt="Menu Item 7">
+                <img src="assets/IMG_9160.JPG" alt="Menu Item 5">
             </div>
             <div class="carousel-item">
-                <img src="assets/IMG_9161.JPG" alt="Menu Item 7">
+                <img src="assets/IMG_9161.JPG" alt="Menu Item 6">
             </div>
             <div class="carousel-item">
                 <img src="assets/IMG_9162.JPG" alt="Menu Item 7">
@@ -76,29 +76,17 @@
               <p>
                 
                 <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet non libero quis luctus. Ut sed pretium lacus. Duis et enim dui.
-      Suspendisse a nulla a neque varius rhoncus. Nullam consequat cursus nisl sed iaculis. Nulla facilisi. Phasellus a odio gravida, sollicitudin
-      augue in, mollis velit.
-      <br>
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet non libero quis luctus. Ut sed pretium lacus. Duis et enim dui.
-      Suspendisse a nulla a neque varius rhoncus. Nullam consequat cursus nisl sed iaculis. Nulla facilisi. Phasellus a odio gravida, sollicitudin
-      augue in, mollis velit.
-      <br>
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet non libero quis luctus. Ut sed pretium lacus. Duis et enim dui.
-      Suspendisse a nulla a neque varius rhoncus. Nullam consequat cursus nisl sed iaculis. Nulla facilisi. Phasellus a odio gravida, sollicitudin
-      augue in, mollis velit.
-      <br>
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet non libero quis luctus. Ut sed pretium lacus. Duis et enim dui.
-      Suspendisse a nulla a neque varius rhoncus. Nullam consequat cursus nisl sed iaculis. Nulla facilisi. Phasellus a odio gravida, sollicitudin
-      augue in, mollis velit.
-      <br>
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet non libero quis luctus. Ut sed pretium lacus. Duis et enim dui.
-      Suspendisse a nulla a neque varius rhoncus. Nullam consequat cursus nisl sed iaculis. Nulla facilisi. Phasellus a odio gravida, sollicitudin
-      augue in, mollis velit.
+                Hi! I’m Scarlett.
+                <br>
+                <br>
+                I’m a student, athlete and baker from Barrie, Ontario who’s loved combining baking and beauty from a young age.
+                While I complete my studies on my way to opening a café and bakery, I’m continuing to refine my craft, seeking 
+                to offer cakes and cupcakes that are decadent and whimsical.
+                <br>
+                <br>
+                My signature buttercream frostings and shockingly gluten-free options are community favourites, so I hope you’ll 
+                allow me the opportunity of adding beauty and taste to your celebrations of the special events and people in your life.
+                
               </p>
           </div>
           <div class="column">
@@ -107,9 +95,7 @@
       </div>
     </section>
 
-    <section id="pricing">
-        <h2>Pricing</h2>
-    </section>
+
 
     <section id="contact">
         <h2>Contact Me</h2>
