--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <nav>
-        <a onclick="scrollToSection('home')">Home</a>
+        <!--<a onclick="scrollToSection('home')">Home</a> -->
         <a onclick="scrollToSection('menu')">Photos</a>
         <a onclick="scrollToSection('about')">About Me</a>
         <!-- <a onclick="scrollToSection('pricing')">Pricing</a> -->
