--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <a href="https://www.instagram.com/la_vie_en_rosettes/?hl=en" target="_blank">
             <img src="assets/instagram.png" alt="Instagram">
         </a>
-        <a href="https://www.pinterest.com/" target="_blank">
+        <!--<a href="https://www.pinterest.com/" target="_blank">
             <img src="assets/tiktok.png" alt="TikTok">
-        </a>
+        </a>-->
     </div>
     <section id="home">
         <h2 class ="title">Welcome to My Bakery!</h2>
