Add a link to Bakesy

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a onclick="scrollToSection('menu')">PHOTOS</a>
             <a onclick="scrollToSection('about')">ABOUT ME</a>
             <a onclick="scrollToSection('contact')">CONTACT</a>
+            <a href="https://bakesy.shop/b/la-vie-en-rosettes">ORDER NOW</a>
             <a class ="igtitle" href="https://www.instagram.com/la_vie_en_rosettes/?hl=en" target="_blank">INSTAGRAM</a>
         </div>
     </nav>
